# goldberg

./: .editorconfig  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  server.js
data/: gp_2_2_local_patch_experiment.json  gp_2_2_optimisation_report.json  gp_2_2_optimised_vertices.json  gp_2_2_vertex_connections.json  gp_3_0_experiment.json
goldberg_optimisation/: __init__.py  gp_3_0_experiment.py  initial_positions.py  local_patch_experiment.py  metrics.py  optimise_gp_2_2.py  topology.py
instructions/: gp_2_2.md  gp_2_2_local_patch_experiment.md  gp_2_2_optimisation.md  gp_3_0_experiment.md
scripts/: generate_vertex_connections.js
src/: goldberg_scene.js  index.css  index.html  server.js
tests/: test_gp_3_0_experiment.py  test_local_patch_experiment.py  test_metrics.py  test_optimise_gp_2_2.py  test_topology.py
